Play welcome voice on page load
Added event listener to play welcome voice on load.

--- a/index.html
+++ b/index.html
@@ -222,6 +222,10 @@
     }
 
     render();
+    // play welcome voice on first load
+    window.addEventListener('load', () => {
+      playVoice('welcome.mp3');
+    });
   </script>
 </body>
 </html>
